fix: posts gap style

--- a/blog/src/theme/BlogPosts/style.module.scss
+++ b/blog/src/theme/BlogPosts/style.module.scss
@@ -64,7 +64,7 @@
   font-family: apple-system, system-ui, sans-serif;
 
   article {
-    margin: 0 1.25rem 2.5rem;
+    margin: 0 1.25rem 3rem;
     border-radius: 1rem;
     overflow: hidden;
     border: 2px solid transparent;
